<resources>
    <string name="app_name">ShopShare</string>
    <!--Category-->
    <string name="result_fail">Result Fail</string>
    <!--Home-->
    <string name="hot_collect">/ 熱門團購 Hot Collection /</string>
    <string name="new_collect">/ 最新上線 New Collection /</string>
    <!--Fragment Type-->
    <string name="profile">個人專區</string>
    <string name="gather">發起團購</string>
    <string name="collection">開團紀錄</string>
    <string name="collection_manage">團購管理</string>
    <string name="participate">訂單填寫</string>
    <string name="notify">通知清單</string>
    <string name="like">追蹤清單</string>
    <string name="my_order">跟團紀錄</string>
    <string name="my_request">徵團紀錄</string>

    <!-- Sort Method-->
    <string name="select_sort">選擇排序方式</string>
    <string name="by_id">綜合排序</string>
    <string name="by_time">最新上線</string>
    <string name="by_hots">熱門團購</string>

    <!--Category-->
    <string name="woman">女裝</string>
    <string name="man">男裝</string>
    <string name="shoes_bag">鞋包</string>
    <string name="child">孩童</string>
    <string name="living">居家生活</string>
    <string name="makeup">美妝保養</string>
    <string name="food">美食</string>
    <string name="health">保健</string>
    <string name="sport">運動</string>
    <string name="computer">3C/電腦/手機</string>
    <string name="stationary">文具用品</string>
    <string name="pet">寵物用品</string>
    <string name="appliance">生活家電</string>
    <string name="ticket">服務/票券</string>
    <string name="other">其他</string>

    <!--Country-->
    <string name="taiwan">台灣</string>
    <string name="japan">日本</string>
    <string name="korea">韓國</string>
    <string name="china">中國</string>
    <string name="usa">美國</string>
    <string name="canada">加拿大</string>
    <string name="eu">歐洲</string>
    <string name="australia">澳洲</string>
    <string name="south_east_asia">東南亞</string>

    <!--Gather Method-->
    <string name="purchase_agent">專業代購</string>
    <string name="purchase_gather">揪團團購</string>
    <string name="purchase_private">私人揪團</string>
    <!-- Gather Condition -->
    <string name="by_price">依金額</string>
    <string name="by_quantity">依數量</string>
    <string name="by_member">依人數</string>
    <string name="hint_price">請輸入滿額金額</string>
    <string name="hint_quantity">請輸入欲徵數量</string>
    <string name="hint_member">請輸入欲徵人數</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Order Status -->
    <string name="gathering">開團中</string>
    <string name="gather_success">已收團</string>
    <string name="order_success">主購已下單</string>
    <string name="shop_shipment">店家已出貨</string>
    <string name="shipment_success">主購已取貨</string>
    <string name="packaging">出貨準備中</string>
    <string name="shipment">商品已寄出</string>
    <string name="finish">團購結束</string>

    <!-- Payment Status -->
    <string name="pending">待確認</string>
    <string name="payment_pending">待付款</string>
    <string name="payment_confirm">確認付款</string>
    <string name="refund_pending">待退款</string>
    <string name="refund_confirm">退款完成</string>
    <string name="balance_pending">待補款</string>
    <string name="balance_confirm">補款完成</string>
    <string name="detail_description">團購詳情</string>
    <string name="Message_board">留言板</string>


    <string name="test">一、購買物品介紹
      ★商品名稱：任天堂 Switch NSO 一年家庭號會員
      ★商品網址：https://www.nintendo.com/switch/online-service/

        ★批價/數量：一年/8組/主購需要1組 再徵求7組

      ★代買：armiya
      ★匯率：1：27.97美金
      ★主購下單付款方式：台新@gogo卡

      ★優惠/折價券：無VIP 2.5%現金回饋

      ★金額試算：34.99*27.97*（1+1.5%手續費-2.5%現金回饋）/8=121.11

        ★後續避免爭議，團購主每人實收110元

    二、截止日期/欲徵數量

      ★預計收團時間：5/20 中午12：00（徵滿提早關團）
      ★預計徵求數量：7組
      ★預計匯款時間：5/20 24：00前，錢收滿後馬上開通


    三、團員付款方式
        ★收款銀行：台新Richart
        ★退款銀行：台新Richart

    四、主辦人連絡方式：站內信/手機/Line

    五、拿貨面交地點/時間：收到匯款後6小時內

    六、運費的分擔方式：無

    七、雜費收取方式＆用途：無

    八、滿額禮/贈品/禮券/紅利點數之內容與分配方式：無

    九、其他注意事項

       1.請先註冊Nintendo Account帳號，並提供主購該帳號email，主購將以此email邀請
    。
       2.組成NSO之前，請先將Nintendo Switch帳號跨區至[美國]，請自行google如何跨區
    。
       3.嚴禁在加入家庭前/後改機、刷機、購買任何來路不明之遊戲序號（eshop代購也是
    ）
       4.成團後一年內會員期間無法退費或變更帳號，請審慎考量。" </string>

    <!-- Delivery Method -->
    <string name="delivery_method">寄送方式</string>
    <string name="seven_eleven">7–11</string>
    <string name="family_mart">全家</string>
    <string name="hi_life">萊爾富</string>
    <string name="ok">OK</string>
    <string name="home_delivery">宅配</string>
    <string name="by_hand">面交</string>

    <!-- Notify Method -->
    <!-- To_Member-->
    <string name="status_change_to_gather_success">成團通知</string>
    <string name="status_change">團購進度通知</string>
    <string name="status_change_to_shipment">商品寄出通知</string>
    <string name="status_change_to_finish">團購結束</string>
    <string name="order_fail">跟團失敗</string>
    <!-- To_Host-->
    <string name="order_increase">跟團人數增加</string>
    <string name="reach_condition">達標通知</string>
    <string name="reach_deadline">已達預定日期</string>
    <!-- To_Subscriber-->
    <string name="request_success">開團通知</string>
    <string name="soon_to_end">團購即將結束</string>
    <string name="request_title">徵團準備</string>


    <!-- My REQUEST-->
    <string name="all_request">全部</string>
    <string name="opening_order">開團中</string>
    <string name="ongoing_request">進行中</string>
    <string name="finished_request">已完成</string>
    <string name="process">處理中</string>
    <string name="shipment_way">待出貨</string>
    <string name="already_ship">已出貨</string>

</resources>