<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.chloe.shopshare.search.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.SearchFragment">

        <TextView
            android:id="@+id/search_category"
            style="@style/GatherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="團購類別"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_category"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_woman"
                style="@style/WidgetAppChipChoice"
                android:text="@string/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_man"
                style="@style/WidgetAppChipChoice"
                android:text="@string/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_child"
                style="@style/WidgetAppChipChoice"
                android:text="@string/child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_shoes_bag"
                style="@style/WidgetAppChipChoice"
                android:text="@string/shoes_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_makeup"
                style="@style/WidgetAppChipChoice"
                android:text="@string/makeup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_health"
                style="@style/WidgetAppChipChoice"
                android:text="@string/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_food"
                style="@style/WidgetAppChipChoice"
                android:text="@string/food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_living"
                style="@style/WidgetAppChipChoice"
                android:text="@string/living"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_appliance"
                style="@style/WidgetAppChipChoice"
                android:text="@string/appliance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pet"
                style="@style/WidgetAppChipChoice"
                android:text="@string/pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_stationary"
                style="@style/WidgetAppChipChoice"
                android:text="@string/stationary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sport"
                style="@style/WidgetAppChipChoice"
                android:text="@string/sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_computer"
                style="@style/WidgetAppChipChoice"
                android:text="@string/computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ticket"
                style="@style/WidgetAppChipChoice"
                android:text="@string/ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_other"
                style="@style/WidgetAppChipChoice"
                android:text="@string/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/search_country"
            style="@style/GatherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="團購國家"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_category" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_country"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_taiwan"
                style="@style/WidgetAppChipChoice"
                android:text="@string/taiwan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_japan"
                style="@style/WidgetAppChipChoice"
                android:text="@string/japan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_korea"
                style="@style/WidgetAppChipChoice"
                android:text="@string/korea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_china"
                style="@style/WidgetAppChipChoice"
                android:text="@string/china"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_usa"
                style="@style/WidgetAppChipChoice"
                android:text="@string/usa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_canada"
                style="@style/WidgetAppChipChoice"
                android:text="@string/canada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_eu"
                style="@style/WidgetAppChipChoice"
                android:text="@string/eu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_australia"
                style="@style/WidgetAppChipChoice"
                android:text="@string/australia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_south_east_asia"
                style="@style/WidgetAppChipChoice"
                android:text="@string/south_east_asia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_other_country"
                style="@style/WidgetAppChipChoice"
                android:text="@string/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="送出查詢"
            android:onClick="@{()->viewModel.navigateToDetail(viewModel.category,viewModel.country)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_country" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>